fix issue with invisible badges everywhere

--- a/basics/transparent.scss
+++ b/basics/transparent.scss
@@ -174,7 +174,7 @@
             }
             .members-1998pB {
                 background: transparent !important;
-                div {
+                > div {
                     background: transparent !important;
                 }
             }
